# PettingZoo

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  _config.yml  adversarial_pursuit.md  atari.md  backgammon.md  battle.md  battlefield.md  boxing.md  check_style.sh  chess.md  classic.md  combat_plane.md  combat_tank.md  combined_arms.md  conftest.py  connect_four.md  cooperative_pong.md  doc_wrap_creater.py  documentation.md  dou_dizhu.md  double_dunk.md  entombed_competitive.md  entombed_cooperative.md  flag_capture.md  frame_stack.py  gather.md  generate_gif_image.py  generate_gifs.py  (+80 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  proposal.md  proposal.yml  question.yml
.github/workflows/: auto-approve.yml  build-docs.yml  build-publish.yml  docs-manual-versioning.yml  docs-test.yml  docs-versioning.yml  gh-pages.yml  linux-py36-test.yaml  linux-test.yml  linux-tutorials-test.yml  macos-test.yml  pre-commit.yml  pygbag.yml  python-package.yml  run-tests.yml  test-tutorials.yml
1.22.3/: searchindex.js
1.22.3/README/: index.html
1.22.3/_static/: documentation_options.js
1.22.3/search/: index.html
1.22.4/: 404.html  searchindex.js
1.23.0/: index.html
1.23.1/: .buildinfo  searchindex.js
1.23.1/README/: index.html
1.23.1/py-modindex/: index.html
1.23.1/release_notes/: index.html
1.24.0/: 404.html  index.html  objects.inv  searchindex.js
1.24.0/README/: index.html
1.24.0/_static/: documentation_options.js
1.24.0/genindex/: index.html
1.24.0/release_notes/: index.html
1.24.0/search/: index.html
1.24.0/tutorials/: index.html
1.24.1/: .buildinfo  objects.inv
1.24.1/_modules/: index.html
1.24.1/release_notes/: index.html
1.24.2/: .buildinfo  objects.inv
1.24.2/_static/: documentation_options.js
1.24.2/genindex/: index.html
1.24.2/release_notes/: index.html
1.24.2/search/: index.html
1.24.3/: .buildinfo  index.html  searchindex.js
1.24.3/README/: index.html
1.24.3/_modules/: index.html
1.24.3/py-modindex/: index.html
1.24.3/search/: index.html
1.25.0/: 404.html
1.25.0/release_notes/: index.html
1.25.0/search/: index.html
1.25.1/: .buildinfo  CNAME  objects.inv  searchindex.js
1.26.0/release_notes/: index.html
1.26.1/: .buildinfo  404.html  index.html  objects.inv
1.26.1/README/: index.html
1.26.1/genindex/: index.html
1.26.1/release_notes/: index.html
MPE/: make_env.py
MPE/multiagent/: environment.py  multi_discrete.py  rendering.py
README/: index.html
_data/: navigation.yml  sitetext.yml
_includes/: docu_header.html  footer.html  head.html  nav.html  navheader.html  services.html  team.html  timeline.html
_layouts/: default.html  docu.html  home.html
_modules/: index.html
_sass/base/: _docu.scss  _mixins.scss  _page.scss
_sass/components/: _navbar.scss
_sass/layout/: _timeline.scss
_site/: 404.html  LICENSE.txt  MANIFEST.in  README.md  adversarial_pursuit.html  atari.html  backgammon.html  battle.html  battlefield.html  boxing.html  butterfly.html  chess.html  classic.html  combat_plane.html  combat_tank.html  combined_arms.html  connect_four.html  cooperative_pong.html  documentation.html  dou_dizhu.html  double_dunk.html  entombed_competitive.html  entombed_cooperative.html  flag_capture.html  gather.html  gin_rummy.html  go.html  hanabi.html  ice_hockey.html  index.html  joust.html  knights_archers_zombies.html  leduc_holdem.html  magent.html  mahjong.html  mario_bros.html  maze_craze.html  mpe.html  multiwalker.html  othello.html  (+41 more)
_site/docs/: JEKYLL_README.html  LICENSE.txt  atari.html  atari.md  butterfly.html  classic.html  development.html  legal.html  magent.html  mpe.html  sisl.html
_static/: documentation_options.js
_static/styles/: furo-extensions.css  furo-extensions.css.map
api/aec/: index.html
api/core/: index.html
api/parallel/: index.html
api/pz_wrappers/: index.html
api/supersuit_wrappers/: index.html
api/utils/: index.html
api/wrappers/: index.html
assets/js/: app.js
docs/: .gitignore  404.md  CNAME  Gemfile  README.md  _config.yml  agent_selector.md  algorithmic.md  api.md  atari.md  butterfly.md  classic.md  conf.py  dev_docs.md  development.md  documentation.md  environment_creation.md  envs.md  gamma.md  index.html  index.md  jekyll-agency.gemspec  legal.md  magent.md  make.bat  mpe.md  requirements.txt  sisl.md  third_party_envs.md  toy_text.md  tutorials.md  web_atari.md  web_butterfly.md  web_classic.md  web_gamma.md  web_magent.md  web_mpe.md  web_sisl.md  wrappers.md
docs/_site/: mpe.md  (+20 more)
drl/: Makefile  main_run.py  parameterSharingCooperativePong.py  parameterSharingPursuit.py  parameterSharingPursuitSingleAction.py  parameterSharingWWorld.py  play_pursuit.py  play_waterworld.py
genindex/: index.html
main/: .buildinfo  404.html  index.html  objects.inv  searchindex.js
mpe/: setup.py
pettingzoo/: LICENSE.txt  __init__.py  core.py
py-modindex/: index.html
release_notes/: index.html
search/: index.html
test/: .test_durations  action_mask_test.py  aec_to_gymnasium_test.py  agent_selector_test.py  all_modules.py  all_parameter_combs.py  all_parameter_combs_test.py  ci_test.py  core_test.py  deprecated_module_test.py  doc_examples_test.py  gymnasium_conversions_test.py  pickle_test.py  print_test.py  pygame_init_test.py  pytest_runner.py  pytest_runner_test.py  pz_to_gymnasium_test.py  specific_env_test.py  specific_env_tests.py  terminite_illegal_bug_test.py  test-renders.py  test_base_wrapper.py  test_codeblocks.py  test_registry.py  test_wrapper.py  unwrapped_test.py  utils_test.py  variable_env_test.py  wrapper_record_video_test.py  wrapper_test.py
test_data/: env_hashes.json
tutorial/: 15_lines.py
tutorials/: 13_lines.py  15_lines.py  README.md  cleanrl.py  connect_four_interactive.py  index.html  manual_pistonball_policy.py  mpe_maddpg.py  render_rllib_leduc_holdem.py  render_rllib_pistonball.py  rllib_leduc_holdem.py  rllib_pistonball.py  test.py
(+2380 files in other folders)
