# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pettingzoo"
description = "Gymnasium for multi-agent reinforcement learning."
readme = "README.md"
requires-python = ">= 3.9, <3.15"
authors = [{ name = "Farama Foundation", email = "contact@farama.org" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "game", "RL", "AI", "gymnasium"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=1.0.0",
    "typing-extensions >=4.4.0",
]
dynamic = ["version"]

[project.optional-dependencies]
# Update dependencies in `all` if any are added or removed
atari = ["multi_agent_ale_py>=0.1.11", "pygame-ce>=2.3.0"]
classic = [
    "chess>=1.9.4",
    "rlcard>=1.0.5",
    "pygame-ce>=2.3.0",
    "shimmy>=1.2.0",
    "open_spiel>=1.6.15; python_version >= '3.11'"
]
butterfly = ["pygame-ce>=2.3.0", "pymunk>=6.2.0"]
sisl = ["pygame-ce>=2.3.0", "pymunk>=6.2.0", "box2d-py>=2.3.5", "scipy>=1.4.1"]
other = ["pillow>=8.0.1"]
testing = [
    "pynput>=1.7.6",
    "pytest>=8.0.0",
    "AutoROM>=0.6.1",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pre-commit>=3.5.0",
    "pytest-markdown-docs>=0.5.0"
]
all = [
    "multi_agent_ale_py>=0.1.11",
    "pygame-ce>=2.3.0",
    "chess>=1.9.4",
    "rlcard>=1.0.5",
    "shimmy>=1.2.0",
    "open_spiel>=1.6.15; python_version >= '3.11'",
    "pymunk>=6.2.0",
    "box2d-py>=2.3.5",
    "scipy>=1.4.1",
    "pillow>=8.0.1",
]

[project.urls]
Homepage = "https://farama.org"
Repository = "https://github.com/Farama-Foundation/PettingZoo"
Documentation = "https://pettingzoo.farama.org"
"Bug Report" = "https://github.com/Farama-Foundation/PettingZoo/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pettingzoo", "pettingzoo.*"]

# Linters and Test tools #######################################################

[tool.ruff]
# Match black's default line length (88) so `ruff format` reproduces the
# historical black formatting. Linting uses only the default rule set
# (pyflakes `F` and a subset of pycodestyle `E`); E501 is not enabled.
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# Default ruff rules (E4, E7, E9, F) plus `I` for import sorting (replaces
# isort). Mirror the historical flake8 ignore.
extend-select = ["I"]
extend-ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]  # allow re-exports without explicit __all__
"test/all_parameter_combs_test.py" = ["F405"]

[tool.ruff.lint.isort]
known-first-party = ["pettingzoo"]

[tool.ty.src]
# add any files/directories with type declaration to include
include = [
    "pettingzoo/",
]
exclude = [
    "pettingzoo/atari/",
    "pettingzoo/butterfly/",
    "pettingzoo/classic/",
    "pettingzoo/sisl/",
    "pettingzoo/test/",
]

[tool.ty.rules]
# Every enabled rule is an error so type-checking failures fail CI. The set of
# enabled rules is unchanged from the forgiving baseline (no new strictness);
# we only promoted the existing diagnostics from "warn" to "error".
all = "error"
# Missing imports are not reported (third-party deps lack stubs).
unresolved-import = "ignore"

[tool.ty.terminal]
# Fail (exit non-zero) on warning-level diagnostics too.
error-on-warning = true

[tool.pytest.ini_options]
addopts = [ "--ignore-glob=*/__init__.py", "-n=auto", "--ignore=tutorials", "--ignore=docs/_scripts", "--ignore=conf.py"]
filterwarnings = [
    "ignore::DeprecationWarning:pygame.*",
    "ignore::DeprecationWarning:pkg_resources.*"
]
